✅ UPDATE FILE index for link js and ui resolve overflow for mobile

--- a/asset/css/style.scss
+++ b/asset/css/style.scss
@@ -14,8 +14,9 @@ body {
   background-color: #18181b;
   display: content;
   width: auto;
+  height: auto;
   height: fit-content;
-  overflow: hidden;
+  overflow: auto;
   @media screen and (min-width: 780px) {
     display: grid;
     grid-template-areas:
@@ -26,6 +27,7 @@ body {
     grid-template-columns: 15% 1fr 0%;
     // grid-gap: 5px;
     height: 100vh;
+    overflow: hidden;
   }
   //loader
   .card-loader {
@@ -461,8 +463,8 @@ footer {
   // height: 78px;
   background: #242a32;
   grid-area: footer;
-  position: absolute;
-  bottom: 0px;
+  position: sticky;
+  bottom: 0;
   background-color: #242a32;
   @media screen and (min-width: 780px) {
     display: none;
@@ -508,12 +510,13 @@ footer {
 
       span {
         margin: 4px auto;
-        font-size: 0.9em;
+        font-size: 1.2rem;
         white-space: nowrap;
         font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
           Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
           sans-serif;
         font: 400;
+        color: #fff;
       }
     }
   }
